--- a/index.html
+++ b/index.html
@@ -257,32 +257,32 @@ html{scroll-behavior:smooth;}
 <div id="page2">
     <h1 id="name"></h1>
 
-    <div class="block reveal">
+    <div class="block">
         <div class="insta"><img src="photo1.jpg"></div>
         <div class="msg">Tumhari smile Instagram feed jaisi perfect hai 💖</div>
     </div>
 
-    <div class="block reveal">
+    <div class="block">
         <div class="circle"><img src="photo2.jpg"></div>
         <div class="msg">Simple si, par sabse zyada special 🌸</div>
     </div>
 
-    <div class="block reveal">
+    <div class="block">
         <div class="star"><img src="photo3.jpg"></div>
         <div class="msg">Star to tum ho ✨ bina filter ke</div>
     </div>
 
-    <div class="block reveal">
+    <div class="block">
         <div class="polaroid"><img src="photo4.jpg"></div>
         <div class="msg">Ye photo ek memory jaisi lagti hai 📸</div>
     </div>
 
-    <div class="block reveal">
+    <div class="block">
         <div class="insta"><img src="photo5.jpg"></div>
         <div class="msg">Bas aise hi hamesha khush rehna 💕</div>
     </div>
 
-    <div class="box reveal">
+    <div class="box">
 Riya 💕<br><br>
 “Kuchh log lafzon me bayan nahi hote,  
 bas mehsoos kiye jaate hain…” ✨  
