--- a/index.html
+++ b/index.html
@@ -167,15 +167,15 @@ html{scroll-behavior:smooth;}
 
 .insta{
     width:140px;
-    background:white;
+    background: linear-gradient(135deg, #ff69b4, #c77dff, #9d4edd);
     padding:6px;
-    border-radius:16px;
+    border-radius:10px;
     box-shadow:0 10px 20px rgba(0,0,0,0.4);
 }
-.insta img{width:100%;border-radius:12px}
+.insta img{width:100%;border-radius:14px}
 
 .circle{
-    width:140px;height:140px;
+    width:150px;height:150px;
     border-radius:50%;
     overflow:hidden;
     border:5px solid #ff69b4;
@@ -268,12 +268,12 @@ html{scroll-behavior:smooth;}
     </div>
 
     <div class="block">
-        <div class="star"><img src="photo3.jpg"></div>
+        <div class="insta"><img src="photo3.jpg"></div>
         <div class="msg">Star to tum ho ✨ bina filter ke</div>
     </div>
 
     <div class="block">
-        <div class="polaroid"><img src="photo4.jpg"></div>
+        <div class="circle"><img src="photo4.jpg"></div>
         <div class="msg">Ye photo ek memory jaisi lagti hai 📸</div>
     </div>
 
