--- a/index.html
+++ b/index.html
@@ -169,13 +169,13 @@ html{scroll-behavior:smooth;}
     width:140px;
     background: linear-gradient(135deg, #ff69b4, #c77dff, #9d4edd);
     padding:6px;
-    border-radius:10px;
+    border-radius:5px;
     box-shadow:0 10px 20px rgba(0,0,0,0.4);
 }
 .insta img{width:100%;border-radius:14px}
 
 .circle{
-    width:150px;height:150px;
+    width:170px;height:170px;
     border-radius:50%;
     overflow:hidden;
     border:5px solid #ff69b4;
@@ -258,7 +258,7 @@ html{scroll-behavior:smooth;}
     <h1 id="name"></h1>
 
     <div class="block">
-        <div class="insta"><img src="photo1.jpg"></div>
+        <div class="insta big"><img src="photo1.jpg"></div>
         <div class="msg">Tumhari smile Instagram feed jaisi perfect hai 💖</div>
     </div>
 
@@ -283,7 +283,7 @@ html{scroll-behavior:smooth;}
     </div>
 
     <div class="box">
-Riya 💕<br><br>
+Riya💕<br><br>
 “Kuchh log lafzon me bayan nahi hote,  
 bas mehsoos kiye jaate hain…” ✨  
 Aur tum unhi logon me se ho 💖<br><br>
