--- a/index.html
+++ b/index.html
@@ -517,6 +517,63 @@ document.addEventListener("click", (e)=>{
         window.scrollTo({ top: 0, behavior: "smooth" });
     }
 });
+        // ===== GLOBAL FUNCTIONS (INLINE ONCLICK WORKS ALWAYS) =====
+function goToPage3(){
+    var p2 = document.getElementById("page2");
+    var p3 = document.getElementById("page3");
+
+    if(!p2 || !p3){
+        alert("page2 or page3 missing");
+        return;
+    }
+
+    p2.style.display = "none";
+    p3.style.display = "block";
+    window.scrollTo(0,0);
+
+    var m = document.getElementById("memMusic");
+    if(m){
+        m.volume = 0.3;
+        m.play().catch(()=>{});
+    }
+}
+
+function goToPage4(){
+    var p3 = document.getElementById("page3");
+    var p4 = document.getElementById("page4");
+
+    if(!p3 || !p4){
+        alert("page3 or page4 missing");
+        return;
+    }
+
+    p3.style.display = "none";
+    p4.style.display = "flex";
+    window.scrollTo(0,0);
+}
+
+// ===== CREATE PAGE-2 BUTTON VIA SCRIPT =====
+window.onload = function(){
+
+    var p2 = document.getElementById("page2");
+    if(!p2){
+        alert("page2 not found");
+        return;
+    }
+
+    var wrap = document.createElement("div");
+    wrap.className = "memories-btn-wrap";
+
+    var btn = document.createElement("button");
+    btn.className = "memories-btn";
+    btn.innerHTML = "🤍 Our Friendship Memories 🤍";
+
+    // 🔥 INLINE CLICK (NO FAIL)
+    btn.setAttribute("onclick","goToPage3()");
+
+    wrap.appendChild(btn);
+    p2.appendChild(wrap);
+};
 </script>
     <div class="memories-btn-wrap">
     <button id="toPage3" class="memories-btn">
@@ -559,6 +616,9 @@ background:linear-gradient(135deg,#0b0b14,#1a0f2e,#2b1055); color:white;">
         </button>
     </div>
 </div>
+    <button class="memories-btn" onclick="goToPage4()">
+    🤍 Thank You 🤍
+    </button>
     <!-- PAGE 4 : THANK YOU (HANDWRITTEN) -->
 <div id="page4" class="page4">
     <div class="paper">
